--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<form class="url" method="POST" action="/session/">
 	<input placeholder="https://www.example.com" name="url" id="iurl" type="text">
 	<button type="submit" id="btn">Go!</button>
-	<a href="https://discord.com">Join our Discord!</a>
+	<a href="https://discord.gg/SU39CsVNYr">Join our Discord!</a>
 		</form>
 			</div>
 				</footer>
