--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <script data-ad-client="ca-pub-4344890442451463" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
-<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 11/23/20): AeroProxy has been released</p>
+<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 11/29/20): Updated heroku-18 to heroku-20</p>
 <div class="container">
 <p>Aero Proxy</p>
 	<form class="url" method="POST" action="/session/">
