--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="__alloy_style.css" rel="stylesheet">
 	<!-- ADSENSE AND ARC  -->
-<script async src="https://arc.io/widget.js#2HQ41oTp"></script>
+<script async src="https://arc.io/widget.min.js#2HQ41oTp"></script>
 <script data-ad-client="ca-pub-4344890442451463" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
-<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 11/29/20): Updated heroku-18 to heroku-20</p>
+<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 11/30/20): Updated ARC.io widget (Bottom left)</p>
 <div class="container">
 <p>Aero Proxy</p>
 	<form class="url" method="POST" action="/session/">
