--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<!-- ADSENSE AND ARC  -->
 <script async src="https://arc.io/widget.min.js#2HQ41oTp"></script>
 <script data-ad-client="ca-pub-4344890442451463" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script type="text/javascript"> var infolinks_pid = 3299715; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </head>
 <body>
 <p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 11/30/20): Updated ARC.io widget (Bottom left)</p>
