--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <script async src="https://arc.io/widget.min.js#2HQ41oTp"></script>
 </head>
 <body>
-<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 11/30/20): Updated ARC.io widget (Bottom left)</p>
+<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 12/2/20): Removed Google Adsense (Denied) | This is now a Ad Free website!</p>
 <div class="container">
 <p>Aero Proxy</p>
 	<form class="url" method="POST" action="/session/">
