--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
 <script async src="https://arc.io/widget.min.js#2HQ41oTp"></script>
 </head>
 <body>
-<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 12/2/20): Website is now mainly for bypassing YouTube Ads</p>
+<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 12/2/20): Removed all ADs | Updated GitHub</p>
 <div class="container">
 <p>Aero Proxy</p>
 	<form class="url" method="POST" action="/session/">
 	<input placeholder="https://www.youtube.com/watch" name="url" id="iurl" type="text">
 	<button type="submit" id="btn">Go!</button>
-	<a href="https://discord.gg/SU39CsVNYr">Join our Discord!</a>
+	<a href="https://github.com/Tacosheel/AeroProxyMain">Check out my GitHub!</a>
 		</form>
 			</div>
 				</footer>
