--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 	<form class="url" method="POST" action="/session/">
 	<input placeholder="https://www.youtube.com/watch" name="url" id="iurl" type="text">
 	<button type="submit" id="btn">Go!</button>
-	<a href="https://github.com/Tacosheel/AeroProxyMain">Check out my GitHub!</a>
+	<a href="https://github.com/Tacosheel/AeroProxy">Check out my GitHub!</a>
 		</form>
 			</div>
 				</footer>
