--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <script async src="https://arc.io/widget.min.js#2HQ41oTp"></script>
 </head>
 <body>
-<p style="background-color:black;color:white; position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 12/9/20): Addressed Security Concerns in GitHub</p>
+<p style="background: linear-gradient(to bottom, #0099cc 0%, #ff99cc 100%); position: absolute; top: 0; left: 0; width: 100%; text-align: center;">(Updated 12/9/20): Addressed Security Concerns in GitHub</p>
 <div class="container">
 <p>Aero Proxy</p>
 	<form class="url" method="POST" action="/session/">
