--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 		</form>
 			</div>
 				</footer>
-				<p style="background: linear-gradient(to bottom, #0099cc 0%, #ff99cc 100%);; left: 0; width: 100%; text-align: center;">Tacosheel © 2020</p>
+				<p style="background: linear-gradient(to bottom, #0099cc 0%, #ff99cc 100%); left: 0; width: 100%; text-align: bottom;">Tacosheel © 2020</p>
 				</div>
 			</body>
 		</html>
